--- a/templates/academy.html
+++ b/templates/academy.html
@@ -963,6 +963,21 @@
                 <div id="body_NN">
                     <div id="conten_NN">
 
+                        <div id="img_NN">
+                            <img src="../static/img/academy/illus-newsletter-light.svg" alt="">
+                        </div>
+
+
+                        <div style="padding: 32px;">
+                            <h2 id="text_NN">No noise. Just signal.</h2>
+                            <div id="get_NN">Get the latest in crypto dropped to your email, every week.</div>
+                            <div id="enter_email">
+                                <div id="your_email">
+                                    <input type="email" id="add_email" name="EMAIL" placeholder="Enter your email address" aria-label="Enter your email address" required="" value="">
+                                </div>
+                                <button id="submit_NN" type="submit">Subscribe</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
