--- a/templates/academy.html
+++ b/templates/academy.html
@@ -962,12 +962,9 @@
             <div id="no_noise">
                 <div id="body_NN">
                     <div id="conten_NN">
-
                         <div id="img_NN">
                             <img src="../static/img/academy/illus-newsletter-light.svg" alt="">
                         </div>
-
-
                         <div style="padding: 32px;">
                             <h2 id="text_NN">No noise. Just signal.</h2>
                             <div id="get_NN">Get the latest in crypto dropped to your email, every week.</div>
@@ -977,7 +974,21 @@
                                 </div>
                                 <button id="submit_NN" type="submit">Subscribe</button>
                             </div>
+                            <div id="Terms_of_Service">
+                                <div id="check_box">
+                                    <input type="checkbox" id="item_check_box" data-bn-type="checkbox" hidden="" name="agree" data-indeterminate="false">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" data-indeterminate="false">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M7.035 16.812l-.001.002 2.121 2.121.002-.002 2.121-2.12 9.19-9.192-2.12-2.121-9.191 9.19-3.536-3.534-2.121 2.12 3.535 3.536z" fill="currentColor">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div id="text_TOS">
+                                    <p>I have read and agree to Binance's</p>
+                                    <div id="terms_OS">Terms of Service</div>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
