--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -868,6 +868,105 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="list-item-container">
+                                    <div class="list-item">
+                                        <a class="content" href="">
+                                            <div class="content-item"style="flex: 5 1 0px; justify-content: flex-start; min-width: 120px;">
+                                                <div class="favorite ">
+                                                    <svg style="font-size: 12px; color: rgb(132, 142, 156);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-omng2l">
+                                                        <path
+                                                            d="M21.4 10.8c-.3-1.1-.3-1.1-.7-2.1l-6-.1L12.8 3h-2.2l-2 5.6-5.9.1c-.3 1.1-.3 1.1-.7 2.1l4.8 3.6L5 20.1l1.8 1.3 4.9-3.4 4.9 3.4c.9-.7.9-.6 1.8-1.3l-1.8-5.7 4.8-3.6z"
+                                                            fill="currentColor">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                                <div class="item-symbol-text">
+                                                    <span class="item-symbol-ba">BNB</span>
+                                                        <span>/BTC</span>
+                                                        <span class="market-multiple">3x</span></div>
+                                            </div>
+                                            <div class="content-item" style="flex: 3 1 0px; min-width: 50px; justify-content: flex-end;">
+                                                <div class="status-green">0.0001014</div>
+                                            </div>
+                                            <div class="content-item"
+                                                style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                                <div class="status-red">-0.49%</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="list-item-container">
+                                    <div class="list-item">
+                                        <a class="content" href="">
+                                            <div class="content-item" style="flex: 5 1 0px; justify-content: flex-start; min-width: 120px;">
+                                                <div class="favorite ">
+                                                    <svg style="font-size: 12px; color: rgb(132, 142, 156);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-omng2l">
+                                                        <path d="M21.4 10.8c-.3-1.1-.3-1.1-.7-2.1l-6-.1L12.8 3h-2.2l-2 5.6-5.9.1c-.3 1.1-.3 1.1-.7 2.1l4.8 3.6L5 20.1l1.8 1.3 4.9-3.4 4.9 3.4c.9-.7.9-.6 1.8-1.3l-1.8-5.7 4.8-3.6z" fill="currentColor">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                                <div class="item-symbol-text">
+                                                    <span class="item-symbol-ba">BNB</span>
+                                                        <span>/BTC</span>
+                                                        <span class="market-multiple">3x</span></div>
+                                            </div>
+                                            <div class="content-item" style="flex: 3 1 0px; min-width: 50px; justify-content: flex-end;">
+                                                <div class="status-normal">0.00000840</div>
+                                            </div>
+                                            <div class="content-item" style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                                <div class="status-green">+0.58%</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="list-item-container">
+                                    <div class="list-item">
+                                        <a class="content" href="">
+                                            <div class="content-item" style="flex: 5 1 0px; justify-content: flex-start; min-width: 120px;">
+                                                <div class="favorite ">
+                                                    <svg style="font-size: 12px; color: rgb(132, 142, 156);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-omng2l">
+                                                        <path d="M21.4 10.8c-.3-1.1-.3-1.1-.7-2.1l-6-.1L12.8 3h-2.2l-2 5.6-5.9.1c-.3 1.1-.3 1.1-.7 2.1l4.8 3.6L5 20.1l1.8 1.3 4.9-3.4 4.9 3.4c.9-.7.9-.6 1.8-1.3l-1.8-5.7 4.8-3.6z" fill="currentColor">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                                <div class="item-symbol-text">
+                                                    <span class="item-symbol-ba">BNB</span>
+                                                        <span>/BTC</span>
+                                                        <span class="market-multiple">3x</span></div>
+                                            </div>
+                                            <div class="content-item" style="flex: 3 1 0px; min-width: 50px; justify-content: flex-end;">
+                                                <div class="status-red">0.000379</div>
+                                            </div>
+                                            <div class="content-item" style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                                <div class="status-red">-0.79</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="list-item-container">
+                                    <div class="list-item">
+                                        <a class="content" href="">
+                                            <div class="content-item" style="flex: 5 1 0px; justify-content: flex-start; min-width: 120px;">
+                                                <div class="favorite ">
+                                                    <svg style="font-size: 12px; color: rgb(132, 142, 156);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-omng2l">
+                                                        <path d="M21.4 10.8c-.3-1.1-.3-1.1-.7-2.1l-6-.1L12.8 3h-2.2l-2 5.6-5.9.1c-.3 1.1-.3 1.1-.7 2.1l4.8 3.6L5 20.1l1.8 1.3 4.9-3.4 4.9 3.4c.9-.7.9-.6 1.8-1.3l-1.8-5.7 4.8-3.6z" fill="currentColor">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                                <div class="item-symbol-text">
+                                                    <span class="item-symbol-ba">BNB</span>
+                                                        <span>/BTC</span>
+                                                        <span class="market-multiple">3x</span></div>
+                                            </div>
+                                            <div class="content-item" style="flex: 3 1 0px; min-width: 50px; justify-content: flex-end;">
+                                                <div class="status-green">0.00000695</div>
+                                            </div>
+                                            <div class="content-item" style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                                <div class="status-red">-0.79%</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
