Trade_coin: Market - Rename item symbols in rows - Update html, css and add demo38

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -854,7 +854,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="item-symbol-text">
-                                                    <span class="item-symbol-ba">BNB</span>
+                                                    <span class="item-symbol-ba">NULS</span>
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
@@ -881,7 +881,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="item-symbol-text">
-                                                    <span class="item-symbol-ba">BNB</span>
+                                                    <span class="item-symbol-ba">NEO</span>
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
@@ -906,7 +906,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="item-symbol-text">
-                                                    <span class="item-symbol-ba">BNB</span>
+                                                    <span class="item-symbol-ba">LINK</span>
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
@@ -930,7 +930,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="item-symbol-text">
-                                                    <span class="item-symbol-ba">BNB</span>
+                                                    <span class="item-symbol-ba">IOTA</span>
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
@@ -954,7 +954,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="item-symbol-text">
-                                                    <span class="item-symbol-ba">BNB</span>
+                                                    <span class="item-symbol-ba">ETC</span>
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
