--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -310,7 +310,7 @@
                             </div>
                             <div id="below_icon">
                                 <div class="table_icon">
-                                    <div>
+                                    <div id="icon_disc">
                                         <a href="https://discord.gg/jE4wt8g2H2">
                                             <div class="icon"><i class="fa-brands fa-discord"></i></div>
                                         </a>
