Academy:Update html,css: uploat-below_table-conten-logo-icon, demo_academy_hinh41...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -988,13 +988,115 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
         <div id="below">
+            <div id="table_below">
+                <div id="logo_below">
+                    <svg viewBox="0 0 127 32" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                        <g>
+                            <path d="M45.721 15.9873H39.7518V3.58379H45.5924C48.1653 3.58379 49.7348 4.85465 49.7348 6.78634V6.81175C49.7348 8.20969 48.9886 8.99761 48.0881 9.48054C49.5289 10.0397 50.4295 10.8531 50.4295 12.5306V12.556C50.4295 14.8689 48.577 15.9873 45.721 15.9873ZM46.9818 7.26926C46.9818 6.45592 46.3386 5.99841 45.1807 5.99841H42.4534V8.61636H45.0006C46.2099 8.61636 46.9818 8.23511 46.9818 7.29468V7.26926ZM47.6765 12.2256C47.6765 11.3868 47.0589 10.8785 45.6438 10.8785H42.4534V13.5981H45.7468C46.956 13.5981 47.7022 13.166 47.7022 12.251V12.2256H47.6765ZM53.4656 15.9873V3.58379H56.2186V15.9873H53.4656ZM68.7231 15.9873L62.6509 8.10802V15.9873H59.9236V3.58379H62.4708L68.3628 11.2343V3.58379H71.0902V15.9873H68.7231ZM83.4917 15.9873L82.3339 13.2168H77.0336L75.8758 15.9873H73.0713L78.4487 3.48213H80.9959L86.3734 15.9873H83.4917ZM79.6837 6.78634L78.0113 10.8022H81.3561L79.6837 6.78634ZM97.2054 15.9873L91.1333 8.10802V15.9873H88.406V3.58379H90.9532L96.8452 11.2343V3.58379H99.5725V15.9873H97.2054ZM108.655 16.216C104.95 16.216 102.223 13.3948 102.223 9.83638V9.81096C102.223 6.278 104.924 3.40588 108.784 3.40588C111.151 3.40588 112.566 4.1938 113.724 5.31215L111.974 7.32009C110.996 6.45591 110.019 5.92216 108.758 5.92216C106.648 5.92216 105.104 7.65052 105.104 9.78555V9.81096C105.104 11.946 106.597 13.6998 108.758 13.6998C110.199 13.6998 111.074 13.1406 112.051 12.251L113.801 14.0048C112.514 15.3519 111.099 16.216 108.655 16.216ZM116.039 15.9873V3.58379H125.508V6.02383H118.792V8.54011H124.71V10.9801H118.792V13.5727H125.611V16.0127H116.039V15.9873ZM66.6647 28.3908H65.018L64.1175 26.2812H59.9236L58.9974 28.3908H57.4022L61.313 19.5457H62.7538L66.6647 28.3908ZM62.0077 21.4011L60.4897 24.9087H63.5514L62.0077 21.4011ZM72.1708 28.5433C69.5721 28.5433 67.6424 26.5608 67.6424 24.0191C67.6424 21.5028 69.5464 19.4694 72.2222 19.4694C73.8689 19.4694 74.8466 20.0286 75.6957 20.8419L74.6923 21.9857C73.9718 21.3249 73.2257 20.8928 72.1965 20.8928C70.4984 20.8928 69.2633 22.2653 69.2633 23.9936C69.2633 25.722 70.4984 27.1199 72.1965 27.1199C73.2772 27.1199 73.9976 26.6878 74.7437 25.9762L75.7471 26.9674C74.8723 27.9333 73.8432 28.5433 72.1708 28.5433ZM86.3734 28.3908H84.7267L83.8262 26.2812H79.6323L78.706 28.3908H77.1108L81.0216 19.5457H82.4625L86.3734 28.3908ZM81.7164 21.4011L80.1983 24.9087H83.2601L81.7164 21.4011ZM91.6222 28.3908H88.3031V19.5965H91.6222C94.4267 19.5965 96.3563 21.5028 96.3563 23.9682C96.3306 26.4845 94.4009 28.3908 91.6222 28.3908ZM91.6222 21.0199H89.8726V26.9929H91.6222C93.5004 26.9929 94.7097 25.7474 94.7097 24.0191C94.7097 22.2907 93.4747 21.0199 91.6222 21.0199ZM105.284 20.9944H100.267V23.282H104.718V24.6545H100.267V27.0183H105.362V28.3908H98.6977V19.5965H105.284V20.9944ZM112.103 26.2303H112.051L109.272 22.1128V28.3908H107.729V19.5965H109.401L112.103 23.7395L114.804 19.5965H116.477V28.3908H114.907V22.0874L112.103 26.2303ZM123.424 28.3908H121.854V24.9341L118.329 19.6219H120.182L122.677 23.5107L125.199 19.6219H127L123.475 24.9087V28.3908H123.424ZM54.2889 23.282H39.7518V24.7562H54.2889V23.282ZM3.65355 12.3781L0 15.9873L3.65355 19.5965L7.30711 15.9873L3.65355 12.3781ZM16.2095 7.21843L22.4874 13.4202L26.141 9.81096L16.2095 0L6.27793 9.81096L9.93155 13.4202L16.2095 7.21843ZM28.7654 12.3781L25.1119 15.9873L28.7654 19.5965L32.419 15.9873L28.7654 12.3781ZM16.2095 24.7816L9.93155 18.5798L6.27793 22.189L16.2095 32L26.141 22.189L22.4874 18.5798L16.2095 24.7816ZM16.2095 19.6219L19.863 16.0127L16.2095 12.4035L12.5559 16.0127L16.2095 19.6219Z"></path>           
+                        </g>
+                    </svg>
+                </div>
+                <div id="footer_below">
+                    <div class="conten_footer">
+                        <div class="contain_below">Discover</div>
+                        <div class="item_below">
+                            <a href="">
+                                <div class="chose_contain">Topics</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Courses</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Glossaries</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Bitcoin Halving</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="conten_footer">
+                        <div class="contain_below">Products</div>
+                        <div class="item_below">
+                            <a href="">
+                                <div class="chose_contain">Exchange</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">BCF</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Labs</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Launchpad</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Research</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Trust Wallet</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="conten_footer">
+                        <div class="contain_below">Company</div>
+                        <div class="item_below">
+                            <a href="">
+                                <div class="chose_contain">Terms & Conditions</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Privacy Policy</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Disclaimer</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Submission Guidelines</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Translation Guidelines</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Content Request</div>
+                            </a>
+                            <a href="">
+                                <div class="chose_contain">Feedback</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div id="icon_footer">
+                    <div id="icon_mxh">
+                        <a class="icon_clone" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/BinanceAcademy" aria-label="Follow Binance Academy on Facebook">
+                            <svg class="svg_icon" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                <path d="M19.375 10.06a9.383 9.383 0 0 1-7.907 9.257V12.77h2.185l.408-2.71h-2.593V8.3a1.356 1.356 0 0 1 1.521-1.468h1.2V4.53a14.7 14.7 0 0 0-2.1-.182 3.31 3.31 0 0 0-3.547 3.643v2.068h-2.38v2.71h2.38v6.546a9.374 9.374 0 1 1 10.843-9.257z"></path>
+                            </svg>
+                        </a>
+                        <a class="icon_clone" target="_blank" rel="noopener noreferrer" href="https://twitter.com/binanceacademy" aria-label="Follow Binance Academy on Twitter">
+                            <svg class="svg_icon" viewBox="0 0 18 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                <path d="M5.90944 13.7676C7.18903 13.7764 8.45762 13.5308 9.64152 13.0452C10.8254 12.5596 11.901 11.8436 12.8058 10.9387C13.7107 10.0339 14.4267 8.95831 14.9123 7.77442C15.398 6.59052 15.6435 5.32193 15.6347 4.04234C15.6347 3.89424 15.6318 3.74692 15.6251 3.6004C16.294 3.11637 16.8714 2.51704 17.3301 1.83048C16.7065 2.10711 16.0448 2.28853 15.3673 2.36867C16.081 1.9415 16.6151 1.26951 16.8702 0.47784C16.1993 0.875917 15.4653 1.15658 14.7 1.30773C14.1847 0.759649 13.5031 0.396688 12.7607 0.275024C12.0184 0.153359 11.2566 0.279775 10.5933 0.634706C9.93003 0.989637 9.40223 1.55329 9.09159 2.23844C8.78095 2.92358 8.7048 3.69201 8.87492 4.4248C7.51583 4.35687 6.18622 4.00382 4.97245 3.38858C3.75868 2.77334 2.6879 1.90967 1.82965 0.853666C1.39239 1.60611 1.2584 2.49693 1.45497 3.3447C1.65154 4.19248 2.16388 4.93344 2.88765 5.41668C2.34485 5.40017 1.81395 5.25358 1.33958 4.98925C1.3388 5.00353 1.3388 5.01782 1.3388 5.03287C1.33896 5.82207 1.61213 6.58691 2.11194 7.19765C2.61176 7.8084 3.30746 8.22744 4.08103 8.38371C3.57776 8.52103 3.0497 8.5411 2.53745 8.4424C2.75578 9.12162 3.18095 9.7156 3.75349 10.1413C4.32603 10.5669 5.01731 10.803 5.73063 10.8164C4.51983 11.7668 3.02454 12.2822 1.48533 12.2798C1.21283 12.2799 0.940561 12.264 0.669922 12.2322C2.23287 13.2363 4.05177 13.7693 5.90944 13.7676Z"></path>
+                            </svg>
+                        </a>
+                        <a class="icon_clone" target="_blank" rel="noopener noreferrer" href="https://t.me/binanceacademy" aria-label="Follow Binance Academy on Telegram">
+                            <svg class="svg_icon" viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                <path d="M16.5257 0.95613L0.992894 6.94483C-0.066948 7.37023 -0.061323 7.96196 0.800144 8.22551L4.78605 9.46968L14.0138 3.64787C14.4499 3.3832 14.8494 3.52537 14.5213 3.81704L7.04397 10.5643L7.12095 10.6987L7.04397 10.5649L6.76974 14.675C6.92584 14.6731 7.07947 14.6358 7.21913 14.566C7.35878 14.4963 7.48083 14.3958 7.57613 14.2721L9.51318 12.389L13.5423 15.3662C14.2841 15.7748 14.8191 15.5629 15.004 14.6773L17.6491 2.21212C17.9199 1.12644 17.2349 0.634171 16.5258 0.956163"></path>
+                            </svg>
+                        </a>
+                        <a class="icon_clone" target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC0BNTTRYI7c0MUM5355zMqg" aria-label="Follow Binance Academy on Youtube">
+                            <svg class="svg_icon" viewBox="0 0 18 12" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                <path d="M16.8029 2.06315C16.7103 1.71769 16.5289 1.40252 16.2766 1.14907C16.0242 0.89562 15.7099 0.712737 15.3649 0.618655C14.0944 0.276856 9.00005 0.276855 9.00005 0.276855C9.00005 0.276855 3.90561 0.276856 2.63525 0.618655C2.2897 0.711721 1.9748 0.894264 1.72231 1.14787C1.46982 1.40148 1.28867 1.71719 1.19713 2.06315C0.961569 3.36529 0.847174 4.68645 0.855418 6.0097C0.846956 7.33297 0.961352 8.65416 1.19713 9.95627C1.28746 10.3035 1.46809 10.6207 1.72068 10.8755C1.97326 11.1304 2.28881 11.3138 2.63525 11.4072C3.90561 11.749 9.00005 11.749 9.00005 11.749C9.00005 11.749 14.0944 11.749 15.3649 11.4072C15.7108 11.3128 16.0258 11.129 16.2782 10.8743C16.5306 10.6196 16.7116 10.303 16.8029 9.95627C17.0387 8.65416 17.1531 7.33297 17.1447 6.0097C17.1529 4.68645 17.0385 3.36528 16.8029 2.06315ZM7.33622 8.4344V3.59147L11.5924 6.0097L7.33622 8.4344Z"></path>
+                            </svg>
+                        </a>
+                    </div>
+                    <div id="icon_word">
 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
