--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -2073,3 +2073,92 @@ body {
     line-height: 1.45;
     margin-inline-start: 8px;
 }
+
+#table_below {
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto auto 1fr;
+    max-width: 1040px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 56px;
+    padding: 40px 32px;
+    display: grid;
+    padding-bottom: 56px;
+    column-gap: 16px;
+}
+
+#logo_below {
+    grid-area: 1 / 1 / auto / auto;
+    margin-bottom: 24px;
+}
+
+#logo_below svg {
+    color: rgb(240, 185, 11);
+    width: 225px;
+    max-width: 100%;
+}
+
+#footer_below {
+    grid-area: 1 / 2 / span 3 / auto;
+    margin-left: 56px;
+    margin-right: 0px;
+    flex-direction: row;
+    margin-bottom: 40px;
+    display: flex;
+}
+
+.conten_footer {
+    margin-bottom: 0px;
+    margin-right: 80px;
+}
+
+.contain_below {
+    color: rgb(234, 236, 239);
+    margin-bottom: 24px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+}
+
+.item_below {
+    align-items: flex-start;
+    flex-direction: column;
+    display: flex;
+}
+
+.chose_contain {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    color: rgb(234, 236, 239);
+    margin-bottom: 16px;
+}
+
+#icon_footer {
+    grid-area: 1 / 3 / span 3 / auto;
+    margin-bottom: 0px;
+}
+
+#icon_mxh {
+    margin-bottom: 32px;
+    align-items: center;
+    display: flex;
+}
+
+.icon_clone {
+    color: rgb(230, 232, 234);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    margin-right: 16px;
+    -webkit-box-align: center;
+    align-items: center;
+    display: flex;
+}
+
+.svg_icon {
+    width: 20px;
+    color: rgb(234, 236, 239);
+    max-width: 100%;
+    height: auto;
+}
