--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -2077,13 +2077,12 @@ body {
 #table_below {
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto auto 1fr;
-    max-width: 1040px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 56px;
-    padding: 40px 32px;
+    padding-left: 180px;
+    padding-right: 160px;
+    padding-top: 55px;
     display: grid;
-    padding-bottom: 56px;
     column-gap: 16px;
 }
 
@@ -2103,7 +2102,6 @@ body {
     margin-left: 56px;
     margin-right: 0px;
     flex-direction: row;
-    margin-bottom: 40px;
     display: flex;
 }
 
@@ -2161,4 +2159,73 @@ body {
     color: rgb(234, 236, 239);
     max-width: 100%;
     height: auto;
+}
+
+#body_word {
+    display: inline-flex;
+    position: relative;
+}
+
+#icon_word {
+    display: flex;
+    height: 40px;
+    line-height: 40px;
+    align-items: center;
+    color: rgb(230, 232, 234);
+}
+
+#word {
+    align-items: center;
+    display: flex;
+    height: 40px;
+    min-width: 128px;
+    padding: 0px 16px;
+}
+
+#svg_word {
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    color: currentcolor;
+    font-size: 24px;
+    fill: currentcolor;
+    width: 1em;
+    height: 1em;
+}
+
+#copyrights {
+    grid-area: 2 / 1 / auto / auto;
+    margin-bottom: 24px;
+    color: rgb(234, 236, 239);
+    font-size: 12px;
+}
+
+#dow_app {
+    grid-area: 3 / 1 / auto / auto;
+    margin-bottom: 56px;
+}
+
+#app_store {
+    color: rgb(230, 232, 234);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    display: inline-block;
+    margin-right: 8px;
+}
+
+.svg_app {
+    width: auto;
+    height: 38px;
+    max-width: 100%;
+}
+
+#app_play {
+    color: rgb(230, 232, 234);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    display: inline-block;
+    margin-right: 0px;
 }
