--- a/templates/academy.html
+++ b/templates/academy.html
@@ -1164,7 +1164,9 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div id="senni">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="none" class="css-1y44wee"><mask id="mask0_4025_125664" maskUnits="userSpaceOnUse" x="0" y="0" width="48" height="48"><circle cx="24" cy="24" r="24" fill="#E6E8EA"></circle></mask><g mask="url(#mask0_4025_125664)"><circle cx="24" cy="24" r="24" fill="#E6E8EA"></circle><path d="M14.4 4L16.8 6.4L14.4 8.8L12 6.4L14.4 4Z" fill="#F0B90B"></path><path d="M41.2 21L42.4 22.2L41.2 23.4L40 22.2L41.2 21Z" fill="#F0B90B"></path><rect x="4.40625" y="40.25" width="16.7085" height="11.5568" transform="rotate(-45 4.40625 40.25)" fill="#76808E"></rect><path d="M14.75 32.4C14.75 29.0863 17.4363 26.4 20.75 26.4H37.9999C41.3136 26.4 43.9999 29.0863 43.9999 32.4V49.2C43.9999 52.5137 41.3136 55.2 37.9999 55.2H20.75C17.4363 55.2 14.75 52.5137 14.75 49.2V32.4Z" fill="#76808E"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M29.3338 30.3001H18.8999V44.9287H29.9785L32.0999 47.1001H48.9999V30.3L37.0984 30.3001L33.2161 34.1824L29.3338 30.3001Z" fill="#F0B90B"></path><rect x="2.66797" y="27.3" width="9.6" height="24" fill="#76808E"></rect><circle cx="27" cy="14" r="9" transform="rotate(-90 27 14)" fill="#F0B90B"></circle><path d="M36.0005 14C36.0005 9.02944 31.9711 5 27.0005 5C22.0299 5 18.0005 9.02944 18.0005 14H36.0005Z" fill="#76808E"></path><rect x="2.66797" y="27.2912" width="6.78118" height="6.78118" transform="rotate(-45 2.66797 27.2912)" fill="#F0B90B"></rect><path fill-rule="evenodd" clip-rule="evenodd" d="M9.84639 9.42858L9.84639 24.8571L5.04639 24.8571L5.04639 9.42858L9.84639 9.42858Z" fill="#76808E"></path></g></svg>
+        </div>
 </body>
 
 </html>
