--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1115,7 +1115,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="trades"></div>
+                <div class="trades">
+                    <div class="trades-container">
+                        <div class="trades-header">
+                            <div><div class="market-trades">Market Trades</div></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="marketActivity"></div>
                 <div class="basictable"></div>
                 <div class="footer"></div>
