--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1119,6 +1119,7 @@
                     <div class="trades-container">
                         <div class="trades-header">
                             <div><div class="market-trades">Market Trades</div></div>
+                            <div><div class="my-trades">My Trades</div></div>
                         </div>
                     </div>
                 </div>
