Trade_coin: Trades - tbheader price - Update html and add demo42

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1121,6 +1121,14 @@
                             <div><div class="market-trades">Market Trades</div></div>
                             <div><div class="my-trades">My Trades</div></div>
                         </div>
+                        <div class="market-tbheader">
+                            <div class="wrap-item">
+                                <div class="item">
+                                    <div class="text">Price(USDT)</div>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
                 <div class="marketActivity"></div>
