Trade_coin: Trades - Add two amount and time in tbheader - Update html and add demo43

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1127,8 +1127,18 @@
                                     <div class="text">Price(USDT)</div>
                                 </div>
                             </div>
-                            
+                            <div class="wrap-item" style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text">Amount(BTC)</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item" style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text">Time</div>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="marketActivity"></div>
