Trade_coin: Trades - Add price in row1 - Update html, css and add demo44

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1138,7 +1138,14 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <div class="market-tbheader">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                           
+                        </div>
                     </div>
                 </div>
                 <div class="marketActivity"></div>
