Trade_coin: Trades - Add others to finish row1 - Update html and add demo45

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1144,7 +1144,16 @@
                                     <div class="text status-green text-normal">29,268.82</div>
                                 </div>
                             </div>
-                           
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
